--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,10 @@ footer p{
 .carousel-inner{
     max-height: 30rem;
 }
+
+/* Media querys */
+@media (max-width:768px){
+    #intro{
+        width: 90% !important;
+    }
+}
